--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,9 @@
 doctype html
 html(lang='ko')
     head
-        block head
-    body 
-        block content
+        title #{pageTitle} | Wetube
+        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+    body
+        main
+            block content
     include partials/footer.pug
